Compare and Objects (#4)
* Change java version to 14 in order to use records

* Create class presenting usage of Objects.compare()

* Add Objects.compare() using not null safe comparator

Throws NPE when try to obtain names from null value.

* Code refactor - extract PrintStream

* Code refactor - add separate package for task

* Add tests for sorting lists of objects

* Add further test of comparing Person objects

* Changes according to PR comments

* Bump up version to 0.4

* Bump up version to 0.5