@@ -6,7 +6,7 @@
 
     <groupId>com.epam.prejap.ess</groupId>
     <artifactId>helpers</artifactId>
-    <version>0.4</version>
+    <version>0.5</version>
     <name>Java Essentail Classes :: Helpers</name>
     <description>Solutions for the task about helpers</description>
     <url>https://careers.epam-poland.pl/training/juniors-java-online-program</url>
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <project.java.version>11</project.java.version>
+        <project.java.version>15</project.java.version>
         <maven.compiler.release>${project.java.version}</maven.compiler.release>
         <version.maven>3.6.0</version.maven>
         <!-- plugin versions should go here, so below they can be omitted -->
@@ -86,6 +86,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${version.plugin.maven.compiler}</version>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -97,7 +100,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${version.plugin.maven.surefire}</version>
                 <configuration>
-                    <argLine>-XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Dtestng.dtd.http=true -Xmx256m</argLine>
+                    <argLine>--enable-preview -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Dtestng.dtd.http=true -Xmx256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
